--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
   <head>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script language="javascript" src="resources/p5.min.js"></script>
+  <script src="resources/p5.gibber.min.js" type="text/javascript" charset="utf-8"></script>
+  <script language="javascript" src="sketch.js"></script>
+  <link rel="stylesheet" href="../resources/examples.css">
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+  <style> body {padding: 0; margin: 0;} </style>
+  <link rel="stylesheet" href="../resources/monokai_sublime.css">
+  <script src="../resources/highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+</head>
+   
 
       <script>
           var api_key = "a8d67c385959aa0b15540e2fde6c994a";
@@ -50,22 +60,17 @@
               });
   
           });
-    
+   
         </script>
 
   </head>
 
   <body>
 
-
-
     <textarea id="text"></textarea>
 
     <p>Emotion:</p>
     <p id="emRes"></p>
-
-
-
 
   </body>
 </html>
